[gd_scene load_steps=2 format=3 uid="uid://dbni20x3d3ate"]

[ext_resource type="Script" uid="uid://cfc63pkbnp0pn" path="res://scripts/lobby_ui.gd" id="1_0fbet"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="LobbyDiscovery" type="HSplitContainer" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
dragging_enabled = false
dragger_visibility = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/LobbyDiscovery"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Host" type="Button" parent="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="LobbyIDField" type="LineEdit" parent="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Enter Lobby Id"
alignment = 1

[node name="JoinWithID" type="Button" parent="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer"]
layout_mode = 2
text = "Join with Code"

[node name="RefreshLobbies" type="Button" parent="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer"]
layout_mode = 2
text = "Refresh Lobbies"

[node name="LobbyLists" type="ItemList" parent="PanelContainer/MarginContainer/LobbyDiscovery"]
unique_name_in_owner = true
layout_mode = 2

[node name="Lobby" type="HSplitContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
dragging_enabled = false
dragger_visibility = 1

[node name="Members" type="VBoxContainer" parent="PanelContainer/MarginContainer/Lobby"]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="PanelContainer/MarginContainer/Lobby/Members"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Lobby/Members/Panel"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/Lobby/Members/Panel/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Lobby/Members/Panel/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/Lobby"]
layout_mode = 2

[node name="Start" type="Button" parent="PanelContainer/MarginContainer/Lobby/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -46.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Start"

[connection signal="pressed" from="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer/JoinWithID" to="." method="_on_join_with_id_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/LobbyDiscovery/VBoxContainer/RefreshLobbies" to="." method="_on_refresh_lobbies_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Lobby/Control/Start" to="." method="_on_start_pressed"]
